--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Edmar
 <!-- Pagination-->
 {% include pagination.html %}
 {% if site.mailchimp_url %}
-    {% include newsletter-box.html %}
+    {% include convertkit-box.html %}
 {% endif %}
 
 
