fix link mistake on contact page

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@ title: Contact Me
         <p>Book me
 If you think that I can be in any way helpful to you, aside from just emailing me, you can also book 20 minutes of my time, so that we could jump on a call and chat about whatever interests you the most.
 (Due to time constraints I cannot promise anything more than 20 minutes)</p>
-        <p>Thanks to <a herf="https://guzey.com/">Alexey Guzey</a> who inspired me to create this page.</p>
+        <p>Thanks to <a href="https://guzey.com/">Alexey Guzey</a> who inspired me to create this page.</p>
     </div><!-- .inner-->
   </main>
 </div>
